--- a/src/pug/layout/layout.pug
+++ b/src/pug/layout/layout.pug
@@ -5,8 +5,11 @@ html(lang="en")
   head
     meta(charset="utf-8")
 
-    title My Site - #{title}
+    title Nail This тренажер английского языка
     meta(name="description" content="The HTML5 Herald")
+    meta(name="viewport" content="minimal-ui")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1")
+    link(rel='shortcut icon' type='image/x-icon' href='/favicon.png')
     block scripts
       script(src='../../js/index.js')
     block styles
@@ -15,4 +18,3 @@ html(lang="en")
     block content
     block foot
       #footer
-        p some footer content
