--- a/src/styles/preferences/_variables.scss
+++ b/src/styles/preferences/_variables.scss
@@ -2,8 +2,7 @@ $black: #000000;
 $green: green;
 
 // fonts
-$font-family: Raleway;
-$font-moon-family: TTMoons;
+$font-family: Cera Pro;
 $fallback-font: Arial, Helvetica, sans-serif;
 
 $thin: 300;
@@ -14,6 +13,6 @@ $bold: bold;
 
 // breakpoints
 $laptop: 1279px;
-$tablet: 1023px;
+$tablet: 1024px;
 $phone: 767px;
 $phone-xs: 320px;
