--- a/src/styles/preferences/_base.scss
+++ b/src/styles/preferences/_base.scss
@@ -1,13 +1,61 @@
-@include font-face('Raleway', "../fonts/ralewayregular", $regular, normal);
-@include font-face('Raleway', "../fonts/ralewaysemibold", $bold, normal);
-@include font-face('Raleway', "../fonts/ralewaylight", $thin, normal);
-@include font-face('TTMoons', "../fonts/TTMoons-Thin", $regular, normal);
+@include font-face("Cera Pro", "../fonts/CeraPro-Regular", $regular, normal);
+@include font-face("Cera Pro", "../fonts/CeraPro-Bold", $bold, normal);
+@include font-face("Cera Pro", "../fonts/CeraPro-Thin", $thin, normal);
+@include font-face("Cera Pro", "../fonts/CeraPro-Light", $light, normal);
+@include font-face("Cera Pro", "../fonts/CeraPro-Medium", $medium, normal);
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
   font-family: $font-family;
   font-size: 15px;
+}
+
+.container {
+  max-width: 1440px;
+  width: 100%;
+  padding-left: 130px;
+  padding-right: 130px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+ul {
+  padding-left: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.btn {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #af8fef;
+  border-radius: 10px;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+@media (max-width: $laptop) {
+  .container {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+}
+@media (max-width: $tablet) {
+  .container {
+    padding-left: 18px;
+    padding-right: 18px;
+  }
 }
