--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -203,14 +203,15 @@ block content
       .container 
         .videos_wrapper 
           .video 
-            iframe(width='560' height='315' src='https://www.youtube.com/embed/dJRfG5AxJ8k' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+            iframe(width='560' height='315' src='https://www.youtube.com/embed/ohdWWI0dOy0' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+
 
     footer#get-demo
       .container
         .footer_title Получи Демо тренажера!
         .footer_subtitle Свяжись с куратором
         .footer_socials
-          a(href="https://t.me/yulia_nail_this" target="_blank").footer_social-item
+          a(href="https://t.me/nailthis" target="_blank").footer_social-item
             .footer_social-icon 
               include ../../images/svg/telegram.svg
             .footer_social-name telegram  
