--- a/src/pug/layout/layout.pug
+++ b/src/pug/layout/layout.pug
@@ -6,7 +6,7 @@ html(lang="en")
     meta(charset="utf-8")
 
     title Nail This тренажер английского языка
-    meta(name="description" content="The HTML5 Herald")
+    meta(name="description" content='Скажи "Goodbye" неловкости в английском с разговорным тренажером Nail this')
     meta(name="viewport" content="minimal-ui")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1")
     link(rel='shortcut icon' type='image/x-icon' href='/favicon.png')
