--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -44,7 +44,7 @@ block content
             .future_block-img
               include ../../images/svg/future1.svg
             .future_block-title Доступно
-            .future_block-description получаешь месяц практики по ценео дного урока с  преподавателем 
+            .future_block-description получаешь месяц практики по цене одного урока с преподавателем 
           .future_block 
             .future_block-img
               include ../../images/svg/future2.svg
@@ -59,7 +59,7 @@ block content
             .future_block-img
               include ../../images/svg/future4.svg
             .future_block-title Эффективно
-            .future_block-description получаешь месяц практики по ценео дного урока с  преподавателем 
+            .future_block-description учишься по методике учителя с Кембриджским дипломом Delta
 
     section.forYou#for-who
       .container 
@@ -67,10 +67,10 @@ block content
         .forYou_blocks   
           .forYou_block.block1
             .forYou_block-title Хочешь эффективно общаться на английском
-            .forYou_block-description ты не будешь разбирать времена, учить правила и делать грамматические упражнения
+            .forYou_block-description тебе надоело искать слова и запинаться
           .forYou_block.block2
             .forYou_block-title Не любишь учить теорию
-            .forYou_block-description тебе надоело искать слова и запинаться
+            .forYou_block-description ты не будешь разбирать времена, учить правила и делать грамматические упражнения
           .forYou_block.block3 
             .forYou_block-title Хочешь овладеть коммуникацией
             .forYou_block-description понимать носителей, использовать разговорные фразы, говорить
