--- a/src/pug/layout/layout.pug
+++ b/src/pug/layout/layout.pug
@@ -5,6 +5,7 @@ html(lang="en")
   head
     meta(charset="utf-8")
     meta(name="google-site-verification" content="6lgFhNrIVlzR05h_Ln7tnqiW0h6jL2hyDxzIJhjAhFI")
+    meta(name="yandex-verification" content="2e760bb825ad117f")
     title Nail This тренажер английского языка
     meta(name="description" content='Скажи "Goodbye" неловкости в английском с разговорным тренажером Nail this')
     meta(name="viewport" content="minimal-ui")
