--- a/src/pug/layout/layout.pug
+++ b/src/pug/layout/layout.pug
@@ -11,6 +11,7 @@ html(lang="en")
     meta(name="viewport" content="minimal-ui")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1")
     link(rel='shortcut icon' type='image/x-icon' href='/favicon.png')
+    link(rel="apple-touch-icon" href='/favicon.png')
     block scripts
       script(src='../../js/index.js')
     block styles
