--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -21,7 +21,7 @@ block content
                   a(href = "#practic") Как устроена практика
                 li 
                   a(href = "#feedback") Отзывы о тренажере
-          a(href="#get-demo").btn.header_btn Получить демо-версию      
+          a(href="https://t.me/yulia_nail_this" target="_blank").btn.header_btn Получить демо-версию      
   main.main
     section.header_section
       .container
@@ -29,10 +29,10 @@ block content
           .header_section-left
             h1 Скажи “Goodbye” 
             p неловкости в английском с разговорным тренажером <span>Nail this</span> 
-            a(href="#get-demo").btn.header_section-btn Получить демо-версию   
+            a(href="https://t.me/yulia_nail_this" target="_blank").btn.header_section-btn Получить демо-версию   
           .header_section-right 
             img(src="../../images/people.png")
-          a(href="#get-demo").btn.header_section-btn.mobile Получить демо-версию    
+          a(href="https://t.me/yulia_nail_this" target="_blank").btn.header_section-btn.mobile Получить демо-версию    
       .wave 
         img(src="../../images/wave.png")   
 
@@ -98,11 +98,14 @@ block content
 
         .founder-certificates
           .founder-certificate
-            img(src="../../images/certificate1.jpeg")
+            a.lightzoom(href='../../images/certificate1.png')
+              img(src="../../images/certificate1.png")
           .founder-certificate
-            img(src="../../images/certificate2.jpeg")
+            a.lightzoom(href='../../images/certificate2.png')
+              img(src="../../images/certificate2.png")
           .founder-certificate
-            img(src="../../images/certificate3.jpeg")
+            a.lightzoom(href='../../images/certificate3.png')
+              img(src="../../images/certificate3.png")
 
     section.steps#practic
       .container 
@@ -168,7 +171,7 @@ block content
             .price_block-month 12 месяцев
             .price_block-description Экономь 16 000 ₽ и получи уверенность в себе
             .price_block-price 20000 ₽
-        a(href="#get-demo").btn.price_btn Получить демо-версию    
+        a(href="https://t.me/yulia_nail_this" target="_blank").btn.price_btn Получить демо-версию    
 
     section.feedback#feedback 
       .container
