--- a/src/styles/pages/main.scss
+++ b/src/styles/pages/main.scss
@@ -341,11 +341,19 @@ header {
 .founder-certificate {
   max-width: 367px;
   width: 100%;
-  min-height: 247px;
+  height: 246px;
   margin-left: 24px;
+
+  a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: 1px solid lightgray;
+  }
   img {
     width: 100%;
-    min-height: 247px;
+    height: 100%;
+    object-fit: cover;
   }
 }
 
