--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -209,53 +209,52 @@ block content
             iframe(width='560' height='315' src='https://www.youtube.com/embed/ohdWWI0dOy0' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 
 
-    //- footer#get-demo
-    //-   .container
-    //-     .footer_title Получи Демо тренажера!
-    //-     .footer_subtitle Свяжись с куратором
-    //-     .footer_socials
-    //-       a(href="https://t.me/nailthis" target="_blank" class='footer_social-item')
-    //-         .footer_social-icon 
-    //-           include ../../images/svg/telegram.svg
-    //-         .footer_social-name telegram  
-    //-       a(href="whatsapp://send?phone=+79268718211" target="_blank" class='footer_social-item')
-    //-         .footer_social-icon 
-    //-           include ../../images/svg/whatsapp.svg
-    //-         .footer_social-name whatsapp  
-    //-       a(href="https://www.facebook.com/yulia.beymlina" target="_blank" class='footer_social-item')
-    //-         .footer_social-icon 
-    //-           include ../../images/svg/facebook.svg
-    //-         .footer_social-name facebook
-    //-   .footer_wave 
-    //-     img(src="../../images/footer-wave.png") 
+    footer#get-demo
+      .container
+        .footer_title Получи Демо тренажера!
+        .footer_subtitle Свяжись с куратором
+        .footer_socials
+          a.footer_social-item(href='https://t.me/nailthis' target='_blank')
+            .footer_social-icon
+              img(src='../../images/svg/telegram.svg')
+            .footer_social-name telegram
+          a.footer_social-item(href='whatsapp://send?phone=+79268718211' target='_blank')
+            .footer_social-icon
+              img(src='../../images/svg/whatsapp.svg')
+            .footer_social-name whatsapp
+          a.footer_social-item(href='https://www.facebook.com/yulia.beymlina' target='_blank')
+            .footer_social-icon
+              img(src='../../images/svg/facebook.svg')
+            .footer_social-name facebook
 
 
-    <footer id="get-demo">
-      <div class="container">
-        <div class="footer_title">Получи Демо тренажера!</div>
-        <div class="footer_subtitle">Свяжись с куратором</div>
-        <div class="footer_socials">
-          <a href="https://t.me/nailthis" target="_blank" class='footer_social-item'>
-            <div class="footer_social-icon">
-              <img src='../../images/svg/telegram.svg'>
-            </div>
-            <div class="footer_social-name">telegram</div>
-          </a>
-          <a href="whatsapp://send?phone=+79268718211" target="_blank" class='footer_social-item'>
-            <div class="footer_social-icon">
-              <img src='../../images/svg/whatsapp.svg'>
-            </div>
-            <div class="footer_social-name">whatsapp</div>
-          </a>
-          <a href="https://www.facebook.com/yulia.beymlina" target="_blank" class='footer_social-item'>
-            <div class="footer_social-icon">
-              <img src='../../images/svg/facebook.svg'>
-            </div>
-            <div class="footer_social-name">facebook</div>
-          </a>
-        </div>  
-      </div>
-    </footer>      
+
+    //- <footer id="get-demo">
+    //-   <div class="container">
+    //-     <div class="footer_title">Получи Демо тренажера!</div>
+    //-     <div class="footer_subtitle">Свяжись с куратором</div>
+    //-     <div class="footer_socials">
+    //-       <a href="https://t.me/nailthis" target="_blank" class='footer_social-item'>
+    //-         <div class="footer_social-icon">
+    //-           <img src='../../images/svg/telegram.svg'>
+    //-         </div>
+    //-         <div class="footer_social-name">telegram</div>
+    //-       </a>
+    //-       <a href="whatsapp://send?phone=+79268718211" target="_blank" class='footer_social-item'>
+    //-         <div class="footer_social-icon">
+    //-           <img src='../../images/svg/whatsapp.svg'>
+    //-         </div>
+    //-         <div class="footer_social-name">whatsapp</div>
+    //-       </a>
+    //-       <a href="https://www.facebook.com/yulia.beymlina" target="_blank" class='footer_social-item'>
+    //-         <div class="footer_social-icon">
+    //-           <img src='../../images/svg/facebook.svg'>
+    //-         </div>
+    //-         <div class="footer_social-name">facebook</div>
+    //-       </a>
+    //-     </div>  
+    //-   </div>
+    //- </footer>      
 
 
           
