--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -209,7 +209,7 @@ block content
             iframe(width='560' height='315' src='https://www.youtube.com/embed/ohdWWI0dOy0' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 
 
-    footer#get-demo
+    footer
       .container
         .footer_title Получи Демо тренажера!
         .footer_subtitle Свяжись с куратором
