--- a/src/pug/layout/layout.pug
+++ b/src/pug/layout/layout.pug
@@ -15,11 +15,11 @@ html(lang="en")
     
     block scripts
       script(src='../../js/index.js')   
-      script(type='text/javascript' src='../../../lightzoom/lightzoom.js')
+      //- script(type='text/javascript' src='../../../lightzoom/lightzoom.js')
 
     block styles
       link(rel="stylesheet" href="../../styles/styles.scss")
-      link(rel='stylesheet' href='../../../lightzoom/style.css' type='text/css')
+      //- link(rel='stylesheet' href='../../../lightzoom/style.css' type='text/css')
 
   body
     block content
