--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -209,23 +209,23 @@ block content
             iframe(width='560' height='315' src='https://www.youtube.com/embed/ohdWWI0dOy0' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 
 
-    //- footer
-    //-   .container
-    //-     .footer_title Получи Демо тренажера!
-    //-     .footer_subtitle Свяжись с куратором
-    //-     .footer_socials
-    //-       a.footer_social-item(href='https://t.me/nailthis' target='_blank')
-    //-         .footer_social-icon
-    //-           img(src='../../images/svg/telegram.svg')
-    //-         .footer_social-name telegram
-    //-       a.footer_social-item(href='whatsapp://send?phone=+79268718211' target='_blank')
-    //-         .footer_social-icon
-    //-           img(src='../../images/svg/whatsapp.svg')
-    //-         .footer_social-name whatsapp
-    //-       a.footer_social-item(href='https://www.facebook.com/yulia.beymlina' target='_blank')
-    //-         .footer_social-icon
-    //-           img(src='../../images/svg/facebook.svg')
-    //-         .footer_social-name facebook
+    footer
+      .container
+        .footer_title Получи Демо тренажера!
+        .footer_subtitle Свяжись с куратором
+        .footer_socials
+          a.footer_social-item(href='https://t.me/nailthis' target='_blank')
+            .footer_social-icon
+              img(src='../../images/svg/telegram.svg')
+            .footer_social-name telegram
+          a.footer_social-item(href='whatsapp://send?phone=+79268718211' target='_blank')
+            .footer_social-icon
+              img(src='../../images/svg/whatsapp.svg')
+            .footer_social-name whatsapp
+          a.footer_social-item(href='https://www.facebook.com/yulia.beymlina' target='_blank')
+            .footer_social-icon
+              img(src='../../images/svg/facebook.svg')
+            .footer_social-name facebook
 
 
 
