--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -11,7 +11,7 @@ block content
           .freeprice_form-search
             input.freeprice_field#name(type="text" placeholder="Имя")
             input.freeprice_field#phone(type="text" placeholder="Номер телефона")
-            button(type="submit").freeprice_button Хочу попробовать
+            button(type="submit").freeprice_button.sweet_click Хочу попробовать
             .freeprice_warning Отправляя данные вы соглашаетесь с нашей <br> политикой конфиденциальности
 
     form.subscribe#form2
