--- a/src/styles/pages/main.scss
+++ b/src/styles/pages/main.scss
@@ -71,10 +71,11 @@
 
 .freeprice_field {
   margin-top: 25px;
-  padding: 8px 16px;
+  padding: 8px 40px;
   border-radius: 10px;
   border: 1px solid black;
   outline: none;
+  text-align: center;
 }
 
 .freeprice_button {
@@ -159,10 +160,11 @@
 
 .subscribe_field {
   margin-top: 25px;
-  padding: 8px 16px;
+  padding: 8px 40px;
   border-radius: 10px;
   border: 1px solid black;
   outline: none;
+  text-align: center;
 }
 
 .freeprice_button {
