--- a/src/styles/preferences/_mixins.scss
+++ b/src/styles/preferences/_mixins.scss
@@ -8,7 +8,13 @@
 }
 
 @mixin mobile {
-  @media (max-width:768px){
+  @media (max-width:660px){
+    @content
+  }
+}
+
+@mixin small {
+  @media (max-width:308px){
     @content
   }
 }
