--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,7 @@
-@import 'normalize.css';
+@import "normalize.css";
 
-@import 'preferences/_variables.scss';
-@import 'preferences/_mixins.scss';
-@import 'preferences/_base.scss';
+@import "preferences/_variables.scss";
+@import "preferences/_mixins.scss";
+@import "preferences/_base.scss";
 
-@import 'pages/main.scss';
-
-//@import 'sweetalert2/src/sweetalert2.scss'
+@import "pages/main.scss";
