--- a/src/pug/layout/layout.pug
+++ b/src/pug/layout/layout.pug
@@ -3,6 +3,22 @@
 //- layout.pug
 html(lang="en")
   head
+    // Yandex.Metrika counter
+    script(type='text/javascript').
+      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+      m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+      ym(85356550, "init", {
+      clickmap:true,
+      trackLinks:true,
+      accurateTrackBounce:true,
+      webvisor:true
+      });
+    noscript
+      div
+        img(src='https://mc.yandex.ru/watch/85356550' style='position:absolute; left:-9999px;' alt='')
+      // /Yandex.Metrika counter
+
     meta(charset="utf-8")
     title Nail This тренажер английского языка
     meta(name="description" content="Скажи Goodbye неловкости в английском с разговорным тренажером Nail this")
