--- a/src/styles/pages/main.scss
+++ b/src/styles/pages/main.scss
@@ -18,6 +18,11 @@
 
 //попап попробовать бесплатно начало
 
+.form-dialog {
+  max-width: 100%;
+  height: 100vh;
+}
+
 .freeprice {
   display: none;
 }
@@ -49,20 +54,22 @@
 
 .freeprice-content {
   display: block;
+  position: relative;
+  padding-top: 50px;
+  @include mobile {
+    padding-top: 30px;
+  }
 }
 
 .close-price_form {
-  position: relative;
+  position: absolute;
   top: 20;
-  cursor: pointer;
-  display: flex;
-  justify-content: flex-end;
   right: 20;
+  cursor: pointer;
 }
 
 .freeprice_form-title {
   text-align: center;
-  margin-top: 25px;
   font-weight: bold;
   font-size: 20px;
   @include mobile {
@@ -143,20 +150,22 @@
 
 .subscribe-content {
   display: block;
+  position: relative;
+  padding-top: 50px;
+  @include mobile {
+    padding-top: 30px;
+  }
 }
 
 .subscribe_form {
-  position: relative;
+  position: absolute;
   top: 20;
-  cursor: pointer;
-  display: flex;
-  justify-content: flex-end;
   right: 20;
+  cursor: pointer;
 }
 
 .subscribe_form-title {
   text-align: center;
-  margin-top: 25px;
   font-weight: bold;
   font-size: 20px;
   @include mobile {
